--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -44,6 +44,7 @@ main {
     flex-direction: column;
     align-items: center;
     margin: 5vw;
+    min-height: 50vw;
 
     h2 {
       font-size: 2rem;
@@ -61,9 +62,13 @@ main {
     }
   }
 }
+
+.add-task-form {
+  display: none;
+  flex-direction: column;
+}
+
 footer {
-  position: absolute;
-  bottom: 0;
   display: flex;
   flex-direction: column;
   border: 1px solid black;
