--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,17 +5,13 @@
 
 header {
   display: flex;
+  flex-direction: column;
   width: 100%;
   align-items: center;
   text-align: center;
 }
 header h1 {
   width: 100%;
-}
-header button {
-  position: absolute;
-  margin-right: 5%;
-  right: 0;
 }
 
 a {
@@ -98,10 +94,11 @@ footer {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
+  align-items: center;
 }
 footer ul {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   list-style-type: none;
   justify-content: space-around;
   text-transform: capitalize;
