--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,18 +5,13 @@
 
 header {
   display: flex;
+  flex-direction: column;
   width: 100%;
   align-items: center;
   text-align: center;
 
   h1 {
     width: 100%;
-  }
-
-  button {
-    position: absolute;
-    margin-right: 5%;
-    right: 0;
   }
 }
 
@@ -88,7 +83,7 @@ main {
     margin-top: 5%;
     margin-left: 5%;
   }
-  
+
   button {
     margin: 5%;
   }
@@ -98,10 +93,11 @@ footer {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
+  align-items: center;
 
   ul {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     list-style-type: none;
     justify-content: space-around;
     text-transform: capitalize;
