--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,9 @@
 header {
   display: flex;
   flex-direction: column;
-  width: 100%;
   align-items: center;
-  text-align: center;
+  align-content: center;
 }
-header h1 {
-  width: 100%;
-}
-
 a {
   text-decoration: none;
   color: black;
@@ -25,34 +20,24 @@ main {
   justify-content: space-around;
 }
 main section {
-  border: 1px solid black;
-}
-main .todo,
-main .doing,
-main .done {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 5vw;
   min-height: 50vw;
+  border: 1px solid black;
 }
-main .todo h2,
-main .doing h2,
-main .done h2 {
+main section h2 {
   font-size: 2rem;
   padding: 10%;
   text-transform: uppercase;
   text-align: center;
 }
-main .todo h3,
-main .doing h3,
-main .done h3 {
+main section h3 {
   padding: 10%;
   font-size: 1.5rem;
 }
-main .todo p,
-main .doing p,
-main .done p {
+main section p {
   font-size: 1.5rem;
   font-weight: 400;
 }
@@ -103,8 +88,38 @@ footer ul {
   justify-content: space-around;
   text-transform: capitalize;
   font-weight: 600;
-  padding: 5%;
 }
 footer p {
-  padding: 10%;
+  padding: 5%;
+}
+
+@media screen and (min-width: 600px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+  }
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
+  header button {
+    position: absolute;
+    right: 0;
+    margin: 0 5%;
+  }
+  main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  main section {
+    min-height: 75vh;
+  }
+  footer ul {
+    display: flex;
+    flex-direction: row;
+    width: 75%;
+    margin-bottom: 2%;
+  }
 }/*# sourceMappingURL=style.css.map */
