--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,12 +6,10 @@
 header {
   display: flex;
   flex-direction: column;
-  width: 100%;
   align-items: center;
-  text-align: center;
+  align-content: center;
 
   h1 {
-    width: 100%;
   }
 }
 
@@ -25,17 +23,12 @@ main {
   justify-content: space-around;
 
   section {
-    border: 1px solid black;
-  }
-
-  .todo,
-  .doing,
-  .done {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 5vw;
     min-height: 50vw;
+    border: 1px solid black;
 
     h2 {
       font-size: 2rem;
@@ -102,10 +95,46 @@ footer {
     justify-content: space-around;
     text-transform: capitalize;
     font-weight: 600;
-    padding: 5%;
   }
 
   p {
-    padding: 10%;
+    padding: 5%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    h1 {
+      width: 100%;
+
+      text-align: center;
+    }
+    button {
+      position: absolute;
+      right: 0;
+      margin: 0 5%;
+    }
+  }
+  main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    section {
+      min-height: 75vh;
+    }
+  }
+  
+
+  footer {
+    ul {
+      display: flex;
+      flex-direction: row;
+      width: 75%;
+      margin-bottom: 2%;
+    }
   }
 }
