--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,46 @@
   padding: 0;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ebebeb;
+}
+
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
+  background-color: #555555;
+  min-height: 10vh;
+  width: 100%;
 }
+header button {
+  background-color: #9d9d9d;
+  border: none;
+  color: white;
+  padding: 2vh;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 2%;
+  min-width: 20vw;
+}
+header a {
+  text-decoration: none;
+  color: white;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + main {
+  padding-top: 102px;
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -22,36 +56,45 @@ main {
 main section {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: 5vw;
+  margin: 2%;
   min-height: 50vw;
+  background-color: white;
   border: 1px solid black;
 }
 main section h2 {
   font-size: 2rem;
-  padding: 10%;
+  padding: 5%;
   text-transform: uppercase;
   text-align: center;
 }
-main section h3 {
-  padding: 10%;
-  font-size: 1.5rem;
+main section article {
+  display: flex;
+  flex-direction: column;
+  margin: 1%;
+  padding: 2%;
 }
-main section p {
-  font-size: 1.5rem;
+main section article h2 {
+  font-size: 1.25rem;
+  padding: 0;
+}
+main section article h3 {
+  font-size: 1rem;
+}
+main section article p {
+  font-size: 1rem;
   font-weight: 400;
 }
 
-.todo {
-  background-color: rgba(0, 255, 255, 0);
+.todo .todo-div article {
+  background-color: #E87461;
 }
 
-.doing {
-  background-color: coral;
+.doing .doing-div article {
+  background-color: #D5D887;
 }
 
-.done {
-  background-color: cornflowerblue;
+.done .done-div article {
+  background-color: #A1CF6B;
 }
 
 .add-task-form {
@@ -80,6 +123,12 @@ footer {
   flex-direction: column;
   border: 1px solid black;
   align-items: center;
+  background-color: #555555;
+  color: white;
+}
+footer a {
+  text-decoration: none;
+  color: white;
 }
 footer ul {
   display: flex;
@@ -103,11 +152,6 @@ footer p {
   header h1 {
     width: 100%;
     text-align: center;
-  }
-  header button {
-    position: absolute;
-    right: 0;
-    margin: 0 5%;
   }
   main {
     display: grid;
