--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,14 +3,46 @@
   padding: 0;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #ebebeb;
+}
+
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
+  background-color: #555555;
+  min-height: 10vh;
+  width: 100%;
 
-  h1 {
+  button {
+    background-color: #9d9d9d;
+    border: none;
+    color: white;
+    padding: 2vh;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 2%;
+    min-width: 20vw;
   }
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + main {
+  padding-top: 102px;
 }
 
 a {
@@ -25,38 +57,64 @@ main {
   section {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    margin: 5vw;
+    margin: 2%;
     min-height: 50vw;
+    background-color: white;
     border: 1px solid black;
 
     h2 {
       font-size: 2rem;
-      padding: 10%;
+      padding: 5%;
       text-transform: uppercase;
       text-align: center;
     }
-    h3 {
-      padding: 10%;
-      font-size: 1.5rem;
-    }
-    p {
-      font-size: 1.5rem;
-      font-weight: 400;
+
+    article {
+      display: flex;
+      flex-direction: column;
+      margin: 1%;
+      padding: 2%;
+
+      h2 {
+        font-size: 1.25rem;
+        padding: 0;
+      }
+
+      h3 {
+        font-size: 1rem;
+      }
+      h4 {
+      }
+      p {
+        font-size: 1rem;
+        font-weight: 400;
+      }
     }
   }
 }
 
 .todo {
-  background-color: rgba(0, 255, 255, 0);
+  .todo-div {
+    article {
+      background-color: #E87461;
+    }
+  }
 }
 
 .doing {
-  background-color: coral;
+  .doing-div {
+    article {
+      background-color: #D5D887;
+    }
+  }
 }
 
 .done {
-  background-color: cornflowerblue;
+  .done-div {
+    article {
+      background-color: #A1CF6B;
+    }
+  }
 }
 
 .add-task-form {
@@ -87,6 +145,13 @@ footer {
   flex-direction: column;
   border: 1px solid black;
   align-items: center;
+  background-color: #555555;
+  color: white;
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
 
   ul {
     display: flex;
@@ -114,9 +179,6 @@ footer {
       text-align: center;
     }
     button {
-      position: absolute;
-      right: 0;
-      margin: 0 5%;
     }
   }
   main {
@@ -127,7 +189,6 @@ footer {
       min-height: 75vh;
     }
   }
-  
 
   footer {
     ul {
