--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ header {
   min-height: 10vh;
   width: 100%;
 }
+header h1 {
+  font-size: 1.5rem;
+  text-align: center;
+}
 header button {
   background-color: #9d9d9d;
   border: none;
