--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -17,6 +17,11 @@ header {
   min-height: 10vh;
   width: 100%;
 
+  h1{
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
   button {
     background-color: #9d9d9d;
     border: none;
