--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,10 @@ main section article p {
   font-weight: 400;
 }
 
+.todo-div, .doing-div, .done-div {
+  min-height: 100%;
+}
+
 .todo .todo-div article {
   background-color: #e87461;
 }
