--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -98,7 +98,7 @@ main {
 }
 
 .todo-div, .doing-div, .done-div{
-  min-height: 100%;
+  min-height: 50vh;
 }
 
 
@@ -192,6 +192,10 @@ footer {
     section {
       min-height: 75vh;
     }
+  }
+  aside{
+    margin: auto;
+    width: 50%;
   }
 
   footer {
