--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #ebebeb;
+  background-image: url("../image/background.jpg");
+  background-size: cover;
 }
 
 header {
@@ -13,7 +14,7 @@ header {
   flex-direction: column;
   align-items: center;
   align-content: center;
-  background-color: #555555;
+  background-color: rgba(85, 85, 85, 0.568627451);
   min-height: 10vh;
   width: 100%;
   position: -webkit-sticky;
@@ -60,20 +61,20 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  min-height: 80vh;
 }
 main section {
   display: flex;
   flex-direction: column;
   margin: 2%;
-  min-height: 50vw;
-  background-color: white;
+  background-color: rgba(243, 243, 243, 0.7607843137);
   border: 1px solid black;
+  height: fit-content;
 }
 main section h2 {
-  font-size: 2rem;
+  font-size: 1rem;
   padding: 5%;
   text-transform: uppercase;
-  text-align: center;
 }
 main section article {
   display: flex;
@@ -93,8 +94,10 @@ main section article p {
   font-weight: 400;
 }
 
-.todo-div, .doing-div, .done-div {
-  min-height: 50vh;
+.todo-div,
+.doing-div,
+.done-div {
+  min-height: 15vh;
 }
 
 .todo .todo-div article {
@@ -133,11 +136,10 @@ main section article p {
 footer {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   align-items: center;
-  background-color: #555555;
+  background-color: rgba(85, 85, 85, 0.568627451);
   color: white;
-  padding: 2%;
+  padding: 1%;
 }
 footer a {
   text-decoration: none;
@@ -167,9 +169,6 @@ footer ul {
   main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-  }
-  main section {
-    min-height: 75vh;
   }
   aside {
     margin: auto;
