--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,7 +5,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #ebebeb;
+  background-image: url("../image/background.jpg");
+  background-size: cover;
 }
 
 header {
@@ -13,7 +14,7 @@ header {
   flex-direction: column;
   align-items: center;
   align-content: center;
-  background-color: #555555;
+  background-color: #55555591;
   min-height: 10vh;
   width: 100%;
   position: sticky;
@@ -60,24 +61,25 @@ a {
   text-decoration: none;
   color: black;
 }
+
 main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  min-height: 80vh;
 
   section {
     display: flex;
     flex-direction: column;
     margin: 2%;
-    min-height: 50vw;
-    background-color: white;
+    background-color: #f3f3f3c2;
     border: 1px solid black;
+    height: fit-content;
 
     h2 {
-      font-size: 2rem;
+      font-size: 1rem;
       padding: 5%;
       text-transform: uppercase;
-      text-align: center;
     }
 
     article {
@@ -94,7 +96,7 @@ main {
       h3 {
         font-size: 1rem;
       }
-     
+
       p {
         font-size: 1rem;
         font-weight: 400;
@@ -103,10 +105,11 @@ main {
   }
 }
 
-.todo-div, .doing-div, .done-div{
-  min-height: 50vh;
+.todo-div,
+.doing-div,
+.done-div {
+  min-height: 15vh;
 }
-
 
 .todo {
   .todo-div {
@@ -158,11 +161,10 @@ main {
 footer {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   align-items: center;
-  background-color: #555555;
+  background-color: #55555591;
   color: white;
-  padding: 2%;
+  padding: 1%;
 
   a {
     text-decoration: none;
@@ -194,12 +196,8 @@ footer {
   main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-
-    section {
-      min-height: 75vh;
-    }
   }
-  aside{
+  aside {
     margin: auto;
     width: 50%;
   }
