--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,30 +5,41 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("../image/background.jpg");
-  background-size: cover;
+  background: linear-gradient(-45deg, #595cff, #c6f8ff, #ffa585);
+  background-size: 200% 200%;
+  animation: gradient 10s ease infinite;
+  height: 100vh;
 }
 
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
   align-content: center;
-  background-color: rgba(85, 85, 85, 0.568627451);
+  background-color: rgba(89, 92, 255, 0.2588235294);
   min-height: 10vh;
   width: 100%;
-  position: -webkit-sticky;
   position: sticky;
 }
 header h1 {
   font-size: 1.5rem;
-  text-align: center;
 }
 header input[type=checkbox] {
   visibility: hidden;
 }
 header .todo {
-  background-color: #9d9d9d;
+  background-color: rgba(89, 92, 255, 0.2588235294);
   border: none;
   color: white;
   padding: 1vh;
@@ -38,14 +49,15 @@ header .todo {
   min-width: 5vw;
 }
 header button {
-  background-color: #9d9d9d;
+  background-color: rgba(89, 92, 255, 0.2588235294);
   border: none;
   color: white;
   padding: 2vh;
   text-align: center;
   text-decoration: none;
-  margin: 2%;
-  min-width: 20vw;
+  margin: 1%;
+  min-width: fit-content;
+  font-size: 1rem;
 }
 header a {
   text-decoration: none;
@@ -100,16 +112,16 @@ main section article p {
   min-height: 15vh;
 }
 
-.todo .todo-div article {
-  background-color: #e87461;
+.todo .todo-div article h2 {
+  background-color: rgba(221, 94, 47, 0.4588235294);
 }
 
-.doing .doing-div article {
-  background-color: #d5d887;
+.doing .doing-div article h2 {
+  background-color: rgba(89, 92, 255, 0.4588235294);
 }
 
-.done .done-div article {
-  background-color: #a1cf6b;
+.done .done-div article h2 {
+  background-color: rgba(99, 199, 157, 0.4588235294);
 }
 
 .add-task-form {
@@ -137,7 +149,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(85, 85, 85, 0.568627451);
+  background-color: rgba(89, 92, 255, 0.2588235294);
   color: white;
   padding: 1%;
 }
