--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,8 +5,22 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("../image/background.jpg");
-  background-size: cover;
+  background: linear-gradient(-45deg, #595cff, #c6f8ff, #ffa585);
+  background-size: 200% 200%;
+  animation: gradient 10s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 header {
@@ -14,23 +28,20 @@ header {
   flex-direction: column;
   align-items: center;
   align-content: center;
-  background-color: #55555591;
+  background-color: #595cff42;
   min-height: 10vh;
   width: 100%;
   position: sticky;
 
   h1 {
     font-size: 1.5rem;
-    text-align: center;
-
-    
   }
-  input[type=checkbox] {
+  input[type="checkbox"] {
     visibility: hidden;
   }
 
-  .todo{
-    background-color: #9d9d9d;
+  .todo {
+    background-color: #595cff42;
     border: none;
     color: white;
     padding: 1vh;
@@ -38,17 +49,17 @@ header {
     text-decoration: none;
     margin: 2%;
     min-width: 5vw;
-    
   }
   button {
-    background-color: #9d9d9d;
+    background-color: #595cff42;
     border: none;
     color: white;
     padding: 2vh;
     text-align: center;
     text-decoration: none;
-    margin: 2%;
-    min-width: 20vw;
+    margin: 1%;
+    min-width: fit-content;
+    font-size: 1rem;
   }
 
   a {
@@ -114,7 +125,9 @@ main {
 .todo {
   .todo-div {
     article {
-      background-color: #e87461;
+      h2 {
+        background-color: #dd5e2f75;
+      }
     }
   }
 }
@@ -122,7 +135,9 @@ main {
 .doing {
   .doing-div {
     article {
-      background-color: #d5d887;
+      h2 {
+        background-color: #595cff75;
+      }
     }
   }
 }
@@ -130,7 +145,9 @@ main {
 .done {
   .done-div {
     article {
-      background-color: #a1cf6b;
+      h2 {
+        background-color: #63c79d75;
+      }
     }
   }
 }
@@ -162,7 +179,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #55555591;
+  background-color: #595cff42;
   color: white;
   padding: 1%;
 
