--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,13 +24,14 @@ body {
 }
 header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   align-content: center;
-  background-color: rgba(89, 92, 255, 0.2588235294);
+  background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
   min-height: 10vh;
   width: 100%;
-  position: sticky;
+  position: fixed;
+  top: 0;
 }
 header h1 {
   font-size: 1.5rem;
@@ -74,13 +75,13 @@ main {
   flex-direction: column;
   justify-content: space-around;
   min-height: 80vh;
+  margin-top: 15vh;
 }
 main section {
   display: flex;
   flex-direction: column;
   margin: 2%;
-  background-color: rgba(243, 243, 243, 0.7607843137);
-  border: 1px solid black;
+  background-color: rgba(243, 243, 243, 0.6039215686);
   height: fit-content;
 }
 main section h2 {
@@ -110,7 +111,8 @@ main section article p {
 .todo-div,
 .doing-div,
 .done-div {
-  min-height: 15vh;
+  min-height: 25vh;
+  padding-bottom: 10vh;
 }
 
 .todo .todo-div article h2 {
@@ -128,6 +130,7 @@ main section article p {
 .add-task-form {
   display: none;
   flex-direction: column;
+  margin-top: 10vh;
 }
 .add-task-form input {
   padding: 2%;
@@ -177,11 +180,12 @@ footer ul {
   }
   header h1 {
     width: 100%;
-    text-align: center;
+    margin-left: 2%;
   }
   main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    margin-top: 15vh;
   }
   aside {
     margin: auto;
