--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
   background: linear-gradient(-45deg, #595cff, #c6f8ff, #ffa585);
   background-size: 200% 200%;
   animation: gradient 10s ease infinite;
-  height: 100vh;
+  height: 100%;
 }
 
 @keyframes gradient {
@@ -43,11 +43,12 @@ header .todo {
   background-color: rgba(89, 92, 255, 0.2588235294);
   border: none;
   color: white;
-  padding: 1vh;
+  padding: 2vh;
   text-align: center;
   text-decoration: none;
-  margin: 2%;
-  min-width: 5vw;
+  margin: 1%;
+  min-width: fit-content;
+  font-size: 1rem;
 }
 header button {
   background-color: rgba(89, 92, 255, 0.2588235294);
@@ -75,7 +76,7 @@ main {
   flex-direction: column;
   justify-content: space-around;
   min-height: 80vh;
-  margin-top: 15vh;
+  margin-top: 15%;
 }
 main section {
   display: flex;
@@ -185,7 +186,7 @@ footer ul {
   main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-top: 15vh;
+    margin-top: 10%;
   }
   aside {
     margin: auto;
