--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(-45deg, #595cff, #c6f8ff, #ffa585);
   background-size: 200% 200%;
-  animation: gradient 10s ease infinite;
+  -webkit-animation: gradient 10s ease infinite;
+          animation: gradient 10s ease infinite;
   height: 100vh;
+}
+
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @keyframes gradient {
@@ -48,15 +61,19 @@ header .todo {
   text-decoration: none;
   margin: 2%;
   min-width: 5vw;
+  border: 1px solid white;
 }
 header button {
   background-color: rgba(89, 92, 255, 0.2588235294);
-  border: none;
+  border: 1px solid white;
+  border-radius: 60px;
   color: white;
   padding: 2vh;
   text-align: center;
   text-decoration: none;
   margin: 1%;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
   min-width: fit-content;
   font-size: 1rem;
 }
@@ -82,6 +99,8 @@ main section {
   flex-direction: column;
   margin: 2%;
   background-color: rgba(243, 243, 243, 0.6039215686);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 main section h2 {
@@ -94,13 +113,23 @@ main section article {
   flex-direction: column;
   margin-top: 1%;
   padding: 2%;
+  text-align: center;
+  border: 2px solid white;
 }
 main section article h2 {
   font-size: 1.25rem;
   padding: 0;
+  text-align: center;
+  font-family: "Urbanist", sans-serif;
 }
 main section article h3 {
   font-size: 1rem;
+  font-family: "Elsie", cursive;
+  text-align: left;
+}
+main section article h4 {
+  font-family: "Elsie", cursive;
+  text-align: left;
 }
 main section article p {
   font-size: 1rem;
@@ -118,13 +147,31 @@ main section article p {
 .todo .todo-div article h2 {
   background-color: rgba(221, 94, 47, 0.4588235294);
 }
+.todo #todo {
+  text-align: center;
+  font-family: "Urbanist", sans-serif;
+  font-size: 2rem;
+  text-decoration: underline;
+}
 
 .doing .doing-div article h2 {
   background-color: rgba(89, 92, 255, 0.4588235294);
 }
+.doing #doing {
+  text-align: center;
+  font-family: "Urbanist", sans-serif;
+  font-size: 2rem;
+  text-decoration: underline;
+}
 
 .done .done-div article h2 {
   background-color: rgba(99, 199, 157, 0.4588235294);
+}
+.done #done {
+  text-align: center;
+  font-family: "Urbanist", sans-serif;
+  font-size: 2rem;
+  text-decoration: underline;
 }
 
 .add-task-form {
