--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -50,6 +50,7 @@ header {
     text-decoration: none;
     margin: 2%;
     min-width: 5vw;
+    border: 1px solid white;
   }
   button {
     background-color: #595cff42;
