--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -200,10 +200,12 @@ main {
   }
 }
 
-.add-task-form {
+aside {
   display: none;
   flex-direction: column;
+  margin: auto;
   margin-top: 10vh;
+  height: 70vh;
   input {
     padding: 2%;
     margin: 0 5%;
@@ -266,6 +268,7 @@ footer {
   }
   aside {
     margin: auto;
+    margin-top: 20vh;
     width: 50%;
   }
 
