--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,21 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(-45deg, #595cff, #c6f8ff, #ffa585);
   background-size: 200% 200%;
-  animation: gradient 10s ease infinite;
+  -webkit-animation: gradient 10s ease infinite;
+          animation: gradient 10s ease infinite;
   height: 100%;
+}
+
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @keyframes gradient {
@@ -35,32 +48,41 @@ header {
 }
 header h1 {
   font-size: 1.5rem;
+  font-family: "Urbanist", sans-serif;
 }
 header input[type=checkbox] {
   visibility: hidden;
 }
 header .todo {
-  background-color: rgba(89, 92, 255, 0.2588235294);
-  border: none;
+  background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
+  border: 1px solid white;
+  border-radius: 10px;
   color: white;
-  padding: 2vh;
+  padding: 1vh;
   text-align: center;
   text-decoration: none;
-  margin: 2%;
-  min-width: 5vw;
-  border: 1px solid white;
+  margin: 1%;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  font-size: 1rem;
+  font-family: "Urbanist", sans-serif;
 }
 header button {
   background-color: rgba(89, 92, 255, 0.2588235294);
   border: 1px solid white;
+  background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
   border-radius: 60px;
   color: white;
   padding: 2vh;
   text-align: center;
   text-decoration: none;
   margin: 1%;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
   min-width: fit-content;
   font-size: 1rem;
+  font-family: "Urbanist", sans-serif;
 }
 header a {
   text-decoration: none;
@@ -84,6 +106,8 @@ main section {
   flex-direction: column;
   margin: 2%;
   background-color: rgba(243, 243, 243, 0.6039215686);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 main section h2 {
@@ -102,6 +126,8 @@ main section article {
 main section article button {
   border: none;
   background: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin-top: 2%;
 }
@@ -121,16 +147,17 @@ main section article h2 {
 main section article h3 {
   font-size: 1rem;
   font-family: "Elsie", cursive;
-  text-align: left;
+  padding: 0.5vw;
 }
 main section article h4 {
   font-family: "Elsie", cursive;
-  text-align: left;
+  padding: 0.5vw;
 }
 main section article p {
   font-size: 1rem;
   font-weight: 400;
   font-family: "Elsie", cursive;
+  padding: 1vw;
 }
 
 .todo-div,
