--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,21 +7,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(-45deg, #595cff, #c6f8ff, #ffa585);
   background-size: 200% 200%;
-  -webkit-animation: gradient 10s ease infinite;
-          animation: gradient 10s ease infinite;
+  animation: gradient 10s ease infinite;
   height: 100%;
-}
-
-@-webkit-keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
 }
 
 @keyframes gradient {
@@ -36,8 +23,7 @@ body {
   }
 }
 header {
-  display: flex;
-  flex-direction: row;
+  display: grid;
   align-items: center;
   align-content: center;
   background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
@@ -47,8 +33,10 @@ header {
   top: 0;
 }
 header h1 {
+  margin: 1%;
   font-size: 1.5rem;
   font-family: "Urbanist", sans-serif;
+  text-align: center;
 }
 header input[type=checkbox] {
   visibility: hidden;
@@ -62,8 +50,6 @@ header .todo {
   text-align: center;
   text-decoration: none;
   margin: 1%;
-  min-width: -webkit-fit-content;
-  min-width: -moz-fit-content;
   min-width: fit-content;
   font-size: 1rem;
   font-family: "Urbanist", sans-serif;
@@ -78,8 +64,6 @@ header button {
   text-align: center;
   text-decoration: none;
   margin: 1%;
-  min-width: -webkit-fit-content;
-  min-width: -moz-fit-content;
   min-width: fit-content;
   font-size: 1rem;
   font-family: "Urbanist", sans-serif;
@@ -99,15 +83,13 @@ main {
   flex-direction: column;
   justify-content: space-around;
   min-height: 80vh;
-  margin-top: 15%;
+  margin-top: 45vh;
 }
 main section {
   display: flex;
   flex-direction: column;
   margin: 2%;
   background-color: rgba(243, 243, 243, 0.6039215686);
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
 }
 main section h2 {
@@ -126,8 +108,6 @@ main section article {
 main section article button {
   border: none;
   background: none;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
   width: fit-content;
   margin-top: 2%;
 }
@@ -202,7 +182,7 @@ aside {
   flex-direction: column;
   margin: auto;
   margin-top: 10vh;
-  height: 70vh;
+  margin-bottom: 10vh;
 }
 aside input {
   padding: 2%;
@@ -212,13 +192,30 @@ aside select {
   margin-top: 5%;
   margin-left: 5%;
   margin-right: 5%;
+  height: 5vh;
+  font-size: 1.25rem;
+  font-family: "Elsie", cursive;
 }
 aside label {
   margin-top: 5%;
   margin-left: 5%;
+  font-family: "Elsie", cursive;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 aside button {
+  background-color: rgba(89, 92, 255, 0.2588235294);
+  border: 1px solid white;
+  background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
+  border-radius: 60px;
+  color: white;
+  padding: 2vh;
+  text-align: center;
+  text-decoration: none;
   margin: 5%;
+  min-width: fit-content;
+  font-size: 1rem;
+  font-family: "Urbanist", sans-serif;
 }
 
 footer {
@@ -253,6 +250,7 @@ footer ul {
   header h1 {
     width: 100%;
     margin-left: 2%;
+    text-align: start;
   }
   main {
     display: grid;
