--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,8 +24,7 @@ body {
 }
 
 header {
-  display: flex;
-  flex-direction: row;
+  display: grid;
   align-items: center;
   align-content: center;
   background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
@@ -35,17 +34,19 @@ header {
   top: 0;
 
   h1 {
+    margin: 1%;
     font-size: 1.5rem;
-    font-family: "Urbanist",sans-serif;
+    font-family: "Urbanist", sans-serif;
+    text-align: center;
   }
   input[type="checkbox"] {
     visibility: hidden;
   }
 
   .todo {
-    background: linear-gradient(-45deg,#c6f8ff, #595cff, #ffa585);
+    background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
     border: 1px solid white;
-    border-radius:10px;
+    border-radius: 10px;
     color: white;
     padding: 1vh;
     text-align: center;
@@ -53,12 +54,12 @@ header {
     margin: 1%;
     min-width: fit-content;
     font-size: 1rem;
-    font-family: "Urbanist",sans-serif;
+    font-family: "Urbanist", sans-serif;
   }
   button {
     background-color: #595cff42;
     border: 1px solid white;
-    background: linear-gradient(-45deg,#c6f8ff, #595cff, #ffa585);
+    background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
     border-radius: 60px;
     color: white;
     padding: 2vh;
@@ -67,7 +68,7 @@ header {
     margin: 1%;
     min-width: fit-content;
     font-size: 1rem;
-    font-family: "Urbanist",sans-serif;
+    font-family: "Urbanist", sans-serif;
   }
 
   a {
@@ -86,7 +87,7 @@ main {
   flex-direction: column;
   justify-content: space-around;
   min-height: 80vh;
-  margin-top: 15%;
+  margin-top: 45vh;
   section {
     display: flex;
     flex-direction: column;
@@ -127,19 +128,17 @@ main {
         padding: 0;
 
         text-align: center;
-        font-family: 'Urbanist', sans-serif;
+        font-family: "Urbanist", sans-serif;
       }
 
       h3 {
         font-size: 1rem;
-        font-family:'Elsie', cursive;
+        font-family: "Elsie", cursive;
         padding: 0.5vw;
-      
       }
-      h4{
-        font-family:'Elsie', cursive;
+      h4 {
+        font-family: "Elsie", cursive;
         padding: 0.5vw;
-        
       }
 
       p {
@@ -164,13 +163,12 @@ main {
     article {
       h2 {
         background-color: #dd5e2f75;
-
       }
     }
   }
-  #todo{
+  #todo {
     text-align: center;
-    font-family: 'Urbanist', sans-serif;
+    font-family: "Urbanist", sans-serif;
     font-size: 2rem;
     text-decoration: underline;
   }
@@ -184,9 +182,9 @@ main {
       }
     }
   }
-  #doing{
+  #doing {
     text-align: center;
-    font-family: 'Urbanist', sans-serif;
+    font-family: "Urbanist", sans-serif;
     font-size: 2rem;
     text-decoration: underline;
   }
@@ -200,9 +198,9 @@ main {
       }
     }
   }
-  #done{
+  #done {
     text-align: center;
-    font-family: 'Urbanist', sans-serif;
+    font-family: "Urbanist", sans-serif;
     font-size: 2rem;
     text-decoration: underline;
   }
@@ -213,7 +211,7 @@ aside {
   flex-direction: column;
   margin: auto;
   margin-top: 10vh;
-  height: 70vh;
+  margin-bottom: 10vh;
   input {
     padding: 2%;
     margin: 0 5%;
@@ -222,15 +220,32 @@ aside {
     margin-top: 5%;
     margin-left: 5%;
     margin-right: 5%;
+    height: 5vh;
+    font-size: 1.25rem;
+    font-family: "Elsie", cursive;
   }
 
   label {
     margin-top: 5%;
     margin-left: 5%;
+    font-family: "Elsie", cursive;
+    font-size: 1.5rem;
+    font-weight: bold;
   }
 
   button {
+    background-color: #595cff42;
+    border: 1px solid white;
+    background: linear-gradient(-45deg, #c6f8ff, #595cff, #ffa585);
+    border-radius: 60px;
+    color: white;
+    padding: 2vh;
+    text-align: center;
+    text-decoration: none;
     margin: 5%;
+    min-width: fit-content;
+    font-size: 1rem;
+    font-family: "Urbanist", sans-serif;
   }
 }
 
@@ -267,6 +282,7 @@ footer {
     h1 {
       width: 100%;
       margin-left: 2%;
+      text-align: start;
     }
   }
   main {
