--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ main section article button .fa-solid {
   right: 5vw;
   top: 15vh;
   padding: 1%;
-  color: red;
+  color: rgba(255, 0, 0, 0.418);
   font-size: 1rem;
 }
 main section article h2 {
@@ -232,12 +232,16 @@ footer a {
 }
 footer ul {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   list-style-type: none;
   justify-content: space-around;
   text-transform: capitalize;
   font-weight: 600;
   margin-top: 2%;
+  width: 100%;
+}
+footer ul li {
+  margin: 5%;
 }
 
 @media screen and (min-width: 600px) {
@@ -255,7 +259,7 @@ footer ul {
   main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-top: 10%;
+    margin-top: 15vh;
   }
   aside {
     margin: auto;
